[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsec-sre-env"
version = "1.0.0"
description = "Autonomous Zero-Trust SRE Agent Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pyyaml"
]